# shore-core

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  BUGLIST.md  CHANGELOG.md  CLAUDE.md  COLLATION_REDESIGN.md  CONFIGURATION.md  Cargo.toml  DECISIONS.md  FEATURES.md  GOALS.md  PKGBUILD  QUIRKS.md  README.md  REWRITE.md  TODO-audit.md  TODO.md  cliff.toml  clippy.toml  deny.toml  install.sh  openclawify-audit.md  release-plz.toml
backend/call-store/: CHANGELOG.md  Cargo.toml
backend/call-store/src/: lib.rs
backend/daemon/: CHANGELOG.md  Cargo.toml
backend/daemon/examples/: dump_assemble_prompt.rs
backend/daemon/src/: auto_discovery.rs  background_transcript.rs  cache_keepalive.rs  characters.rs  claude_code.rs  content_util.rs  convert.rs  effective_catalog.rs  handshake.rs  hot_reload.rs  lib.rs  main.rs  notifications.rs  prompts.rs  sandbox.rs  supervisor.rs  sync.rs  templates.rs  test_support.rs  transcript_capture.rs  tts.rs
backend/diagnostics/: CHANGELOG.md  Cargo.toml
backend/diagnostics/src/: lib.rs  logging.rs
backend/ledger/: CHANGELOG.md  Cargo.toml
backend/ledger/src/: budget.rs  cache_tracker.rs  client.rs  convert.rs  ledger.rs  lib.rs  pricing.rs  query.rs  stream.rs  sync.rs
backend/llm/: CHANGELOG.md  Cargo.toml
backend/llm/examples/: ab_thinking.rs  live_reasoning_replay.rs
backend/llm/src/: cache_forensics.rs  convert.rs  credentials.rs  debug_log.rs  discovery.rs  lib.rs  retry.rs  sanitize.rs  stream.rs  types.rs
backend/llm/tests/: claude_code_live.rs
backend/mcp/: CHANGELOG.md  Cargo.toml
backend/mcp-client/: Cargo.toml
backend/mcp-client/src/: client.rs  error.rs  lib.rs  supervisor.rs
backend/mcp/src/: lib.rs  stub.rs
backend/mcp/tests/: stdio.rs
backend/swp-server/: CHANGELOG.md  Cargo.toml
backend/swp-server/src/: lib.rs  registry.rs
bridges/matrix/: Cargo.toml
bridges/matrix/src/: bridge.rs  main.rs
bridges/matrix/tests/: bridge_integration.rs
clients/cli/: CHANGELOG.md  Cargo.toml
clients/cli/src/: cli.rs  images.rs  main.rs  run.rs  state.rs
clients/tui/: Cargo.toml
clients/tui/src/: app.rs  connection.rs  images.rs  input.rs  main.rs  markdown.rs  ui.rs
core/config/: CHANGELOG.md  Cargo.toml  capabilities.toml  capability_parity_fixture.toml
core/config/src/: app.rs  capabilities.rs  cron.rs  duration.rs  lib.rs  mcp.rs  models.rs  providers.rs
core/config/tests/: config_roundtrip_prop.rs
core/protocol/: CHANGELOG.md  Cargo.toml
core/protocol/src/: client_msg.rs  lib.rs  merge.rs  server_msg.rs  tool_display.rs  types.rs
core/protocol/tests/: golden_json.rs  wire_framing_prop.proptest-regressions  wire_framing_prop.rs
core/swp-client/: CHANGELOG.md  Cargo.toml
core/swp-client/src/: client_config.rs  conn_manager.rs  connection.rs  discovery.rs  error.rs  image_protocol.rs  lib.rs  stream.rs  sync.rs
dev/mcp/: Cargo.toml  README.md
dev/mcp/src/: handler.rs
dev/test-harness/: Cargo.toml
dev/test-harness/claude_code/: README.md  run.sh
dev/test-harness/src/: chaos.rs  collected.rs  config.rs  harness.rs  lib.rs  mock_llm.rs
dev/test-harness/tests/: live_cache_regression.rs  live_compaction_cache.rs  response_delay_recovery.rs  search_history_runtime.rs  wire_shape.rs
shore-cli/: Cargo.toml
shore-cli/src/: cli.rs  images.rs  main.rs  notifications.rs  output.rs  run.rs  state.rs
shore-cli/src/output/: commands.rs  mod.rs  styling.rs  transcript.rs
shore-client/: Cargo.toml
shore-client/src/: audio.rs  client_config.rs  conn_manager.rs  connection.rs  discovery.rs  error.rs  image_protocol.rs  lib.rs  stream.rs  sync.rs
shore-config/: Cargo.toml
shore-config/src/: app.rs  duration.rs  lib.rs  models.rs
shore-daemon/: Cargo.toml
shore-daemon-server/: Cargo.toml
shore-daemon-server/src/: lib.rs  registry.rs
shore-daemon/src/: cache_keepalive.rs  characters.rs  compat.rs  content_util.rs  handler.rs  handshake.rs  lib.rs  main.rs  notifications.rs  runtime_state.rs  supervisor.rs  sync.rs  templates.rs  test_support.rs  tts.rs
shore-daemon/src/autonomy/: activity.rs  cache_keepalive.rs  heartbeat.rs  interiority.rs  interiority_journal.rs  manager.rs  mod.rs  recap_store.rs  state.rs  tick.rs  time_parse.rs  timing.rs
shore-daemon/src/commands/: conversation.rs  mod.rs  navigation.rs  state.rs  usage.rs
shore-daemon/src/config/: app.rs  mod.rs  models.rs
shore-daemon/src/engine/: atomic.rs  conversations.rs  messages.rs  mod.rs  prompt.rs  segments.rs  tools.rs
shore-daemon/src/handler/: command_dispatch.rs  generation.rs  images.rs  mod.rs  persistence.rs  resize.rs  task.rs  tests.rs
shore-daemon/src/llm_client/: mod.rs  retry.rs  stream.rs  types.rs
shore-daemon/src/memory/: db.rs  (+18 more)
shore-daemon/tests/: autonomy_integration.rs  direct_response_guardrails.rs  e2e.rs  integration_autonomy.rs  integration_compaction.rs  integration_concurrency.rs  integration_ledger.rs  integration_message_integrity.rs  integration_pipeline.rs  integration_providers.rs  memory_bench.rs  memory_integration.rs  spawn_bind_zero.rs
shore-gui-godot/rust/: Cargo.toml
shore-gui/src-tauri/: Cargo.toml
shore-ledger/: Cargo.toml
shore-ledger/src/: cache_tracker.rs  client.rs  ledger.rs  lib.rs  pricing.rs  query.rs  stream.rs
shore-llm-client/: Cargo.toml
shore-llm-client/examples/: ab_thinking.rs
shore-llm-client/src/: cache_forensics.rs  debug_log.rs  lib.rs  retry.rs  stream.rs  types.rs
shore-matrix/: Cargo.toml
shore-matrix/src/: bot.rs  bridge.rs  connection.rs  homeserver.rs  lib.rs  main.rs  provision.rs  rooms.rs  synapse.rs
shore-matrix/tests/: bridge_integration.rs
shore-mcp/: Cargo.toml  README.md
shore-mcp/src/: cli.rs  gating.rs  handler.rs  lib.rs  main.rs  profile.rs  server.rs
shore-mcp/tests/: autospawn_detach.rs  mcp_integration.rs  profile_resolution.rs
shore-test-harness/: Cargo.toml
shore-test-harness/src/: chaos.rs  collected.rs  config.rs  harness.rs  lib.rs  mock_llm.rs
shore-tui/: Cargo.toml
shore-tui/src/: app.rs  clipboard.rs  connection.rs  images.rs  input.rs  main.rs  markdown.rs  ui.rs
(+942 files in other folders)
