[workspace]
resolver = "2"
members = [
    "core/protocol",
    "core/config",
    "core/swp-client",
    "backend/diagnostics",
    "backend/llm",
    "backend/ledger",
    "backend/swp-server",
    "backend/daemon",
    "clients/cli",
    "dev/test-harness",
]
default-members = [
    "core/protocol",
    "core/config",
    "core/swp-client",
    "backend/daemon",
    "clients/cli",
]

[workspace.package]
# No shared `version` — every workspace member carries its own. The five
# binary-side crates used to share `version.workspace = true`, which made
# release-plz unable to compute per-crate bumps (it saw one workspace
# version, not five independent versions). They now publish to crates.io
# independently like the core libraries, each tracking its own version.
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mythofmeat/shore-core"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dirs = "6"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
libc = "0.2"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
which = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
dashmap = "6"
futures-util = "0.3"
async-trait = "0.1"
insta = { version = "1", features = ["json"] }
proptest = "1"
# `version` is required alongside `path` for `cargo package` to succeed
# (cargo refuses path-only deps when packaging, even when publish is
# disabled). Versions here track what is published on crates.io for the
# core library crates so packaged manifests stay coherent.
shore-protocol = { path = "core/protocol", version = "0.6.1" }
shore-config = { path = "core/config", version = "0.8.1" }
shore-swp-client = { path = "core/swp-client", version = "0.2.9" }
shore-diagnostics = { path = "backend/diagnostics", version = "0.2.1" }
shore-llm = { path = "backend/llm", version = "7.0.0" }
shore-ledger = { path = "backend/ledger", version = "3.0.0" }
shore-swp-server = { path = "backend/swp-server", version = "1.8.13" }
shore-daemon = { path = "backend/daemon", version = "11.0.0" }
# Intentionally path-only (no `version`). shore-test-harness is a dev-only
# crate that shore-daemon pulls in as a dev-dependency, and it depends
# back on shore-daemon — a versioned cycle there causes
# `cargo package --workspace` to silently skip shore-daemon (and several
# other crates). Path-only dev-deps are stripped from packaged manifests
# entirely, so the cycle vanishes for packaging while tests still link
# against the harness via the path.
shore-test-harness = { path = "dev/test-harness" }
rusqlite = { version = "0.37", features = ["bundled"] }

[workspace.lints.clippy]
# Pedantic is enabled workspace-wide as a quality ratchet. priority = -1 lets
# the individual `allow`s below override the group. Several pedantic lints are
# high-churn / low-signal on a codebase this size and are widely disabled in
# serious Rust projects — we allow those rather than annotate thousands of
# call sites.
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"

# Panic-hygiene ratchet. Set to `warn` workspace-wide for visibility; each
# cleaned crate then escalates these to `deny` via a `#![deny(...)]` at its
# crate root (Cargo `[lints] workspace = true` can't add per-crate overrides),
# so cleaned crates can never regress. Tests are exempt via clippy.toml
# (`allow-{unwrap,expect,panic}-in-tests`); not-yet-cleaned crates stay at warn
# until they are cleaned and locked.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unreachable = "warn"
todo = "warn"
unimplemented = "warn"

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[profile.release]
strip = true        # drop symbol tables (~20% smaller, no behavior change)
lto = "thin"        # most of the LTO size/perf win, far cheaper to link than "fat"
codegen-units = 1   # smaller and slightly faster runtime
