[workspace]
resolver = "2"
members = [
    "core/protocol",
    "core/config",
    "core/swp-client",
    "backend/diagnostics",
    "backend/llm",
    "backend/ledger",
    "backend/swp-server",
    "backend/daemon",
    "clients/cli",
    "dev/test-harness",
]
default-members = [
    "core/protocol",
    "core/config",
    "core/swp-client",
    "backend/daemon",
    "clients/cli",
]

[workspace.package]
# No shared `version` — every workspace member carries its own. The five
# binary-side crates used to share `version.workspace = true`, which made
# release-plz unable to compute per-crate bumps (it saw one workspace
# version, not five independent versions). They now publish to crates.io
# independently like the core libraries, each tracking its own version.
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mythofmeat/shore-core"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dirs = "6"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
libc = "0.2"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
which = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
dashmap = "6"
futures-util = "0.3"
async-trait = "0.1"
insta = { version = "1", features = ["json"] }
proptest = "1"
# `version` is required alongside `path` for `cargo package` to succeed
# (cargo refuses path-only deps when packaging, even when publish is
# disabled). Versions here track what is published on crates.io for the
# core library crates so packaged manifests stay coherent.
shore-protocol = { path = "core/protocol", version = "0.7.0" }
shore-config = { path = "core/config", version = "0.10.0" }
shore-swp-client = { path = "core/swp-client", version = "0.2.11" }
shore-diagnostics = { path = "backend/diagnostics", version = "0.2.2" }
shore-llm = { path = "backend/llm", version = "8.0.0" }
shore-ledger = { path = "backend/ledger", version = "3.0.3" }
shore-swp-server = { path = "backend/swp-server", version = "1.8.15" }
shore-daemon = { path = "backend/daemon", version = "12.0.1" }
# Intentionally path-only (no `version`). shore-test-harness is a dev-only
# crate that shore-daemon pulls in as a dev-dependency, and it depends
# back on shore-daemon — a versioned cycle there causes
# `cargo package --workspace` to silently skip shore-daemon (and several
# other crates). Path-only dev-deps are stripped from packaged manifests
# entirely, so the cycle vanishes for packaging while tests still link
# against the harness via the path.
shore-test-harness = { path = "dev/test-harness" }
rusqlite = { version = "0.37", features = ["bundled"] }

[workspace.lints.clippy]
# Pedantic is enabled workspace-wide as a quality ratchet. priority = -1 lets
# the individual `allow`s below override the group. Several pedantic lints are
# high-churn / low-signal on a codebase this size and are widely disabled in
# serious Rust projects — we allow those rather than annotate thousands of
# call sites.
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"

# Panic-hygiene ratchet. Set to `warn` workspace-wide for visibility; each
# cleaned crate then escalates these to `deny` via a `#![deny(...)]` at its
# crate root (Cargo `[lints] workspace = true` can't add per-crate overrides),
# so cleaned crates can never regress. Tests are exempt via clippy.toml
# (`allow-{unwrap,expect,panic}-in-tests`); not-yet-cleaned crates stay at warn
# until they are cleaned and locked.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unreachable = "warn"
todo = "warn"
unimplemented = "warn"

# Tier 2 correctness ratchet (#115): close suppression escape hatches and make
# ignored must-use results explicit. These stay at workspace `warn` so local
# development gets signal while CI's `-D warnings` keeps the tree hard-locked.
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
unwrap_in_result = "warn"
panic_in_result_fn = "warn"
let_underscore_must_use = "warn"
as_conversions = "warn"

# Indexing/arithmetic/cast ratchet (#149). Same belt-and-suspenders pattern as
# the panic-hygiene block above: `warn` here so a newly-added or un-locked crate
# inherits the baseline automatically (CI's `-D warnings` keeps it hard), while
# each cleaned crate independently escalates these to `deny` via its crate-root
# `#![deny(...)]` (Cargo `[lints] workspace = true` can't add per-crate
# overrides). All 10 crates currently deny these, so the workspace entry is a
# floor for future crates, not a relaxation. `indexing_slicing` (#147) and
# `arithmetic_side_effects` (#148) panic at runtime; the cast lints silently
# corrupt values. Daemon tests exempt the index/arith pair at module level via
# `#![cfg_attr(test, expect(...))]`, which a workspace `warn` does not disturb.
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"

# Import & literal hygiene ratchet (#154). Same belt-and-suspenders pattern as
# the blocks above: `warn` here so a newly-added or un-locked crate inherits the
# baseline automatically (CI's `-D warnings` keeps it hard), while each cleaned
# crate escalates these to `deny` via its crate-root `#![deny(...)]`. All make
# provenance/literals greppable; `wildcard_imports` rides in via `pedantic`
# already but is named explicitly so the deny locks can list it. The cluster's
# fourth proposed lint, `semicolon_outside_block`, is intentionally omitted: it
# is mutually exclusive with `semicolon_if_nothing_returned` (enforced via
# `pedantic` and already clean), and no source form satisfies both on a bare
# scope block.
wildcard_imports = "warn"
unseparated_literal_suffix = "warn"
single_char_lifetime_names = "warn"

# Low-noise Tier 2 lints (#115) that are clean workspace-wide.
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
exit = "warn"
mem_forget = "warn"
match_wildcard_for_single_variants = "warn"
wildcard_enum_match_arm = "warn"
print_stdout = "warn"
print_stderr = "warn"
undocumented_unsafe_blocks = "warn"

# Unsafe-block hardening (#156). `multiple_unsafe_ops_per_block` forces one
# unsafe op per block so each carries its own `// SAFETY:` justification (pairs
# with `undocumented_unsafe_blocks`); `missing_assert_message` requires every
# assert to carry a failure message. Both are near-zero-noise on this tree.
multiple_unsafe_ops_per_block = "warn"
missing_assert_message = "warn"

[workspace.lints.rust]
# Rustc-side paranoia lints from the Tier 2 ratchet (#115). Crates also deny
# these at their roots once clean, with documented local `unsafe_code`
# expectations for the small libc FFI surfaces.
unsafe_code = "warn"
elided_lifetimes_in_paths = "warn"
unused_qualifications = "warn"
unused_results = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"

[profile.release]
strip = true        # drop symbol tables (~20% smaller, no behavior change)
lto = "thin"        # most of the LTO size/perf win, far cheaper to link than "fat"
codegen-units = 1   # smaller and slightly faster runtime
