[package]
name = "shore-client"
version = "0.1.0"
edition = "2021"

[dependencies]
shore-config = { path = "../shore-config" }
shore-protocol = { path = "../shore-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros", "time"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
