[package]
name = "shore-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
dirs = "6"
chrono = "0.4"
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
