[package]
name = "shore-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
shore-protocol = { path = "../shore-protocol" }
shore-config = { workspace = true }
shore-diagnostics = { workspace = true }
shore-llm-client = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
fs2 = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
rusqlite = { workspace = true }
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"
dashmap = { workspace = true }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
shore-client = { path = "../shore-client" }
shore-config = { workspace = true }
shore-diagnostics = { workspace = true }
shore-llm-client = { workspace = true }
