[package]
name = "shore-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
shore-llm-client = { workspace = true }
shore-config = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
