[package]
name = "shore-llm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
shore-protocol = { workspace = true }
shore-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
