[package]
name = "shore-matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
shore-protocol = { path = "../shore-protocol" }
shore-client = { path = "../shore-client" }
matrix-sdk = { version = "0.16", default-features = false, features = ["e2e-encryption", "markdown", "native-tls"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime = "0.3"
mime_guess = "2"
