[package]
name = "shore-test-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
shore-config = { path = "../shore-config" }
shore-client = { path = "../shore-client" }
shore-daemon = { path = "../shore-daemon" }
shore-protocol = { path = "../shore-protocol" }
shore-llm-client = { path = "../shore-llm-client" }
shore-ledger = { path = "../shore-ledger" }
shore-diagnostics = { path = "../shore-diagnostics" }

wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
serde_json = { version = "1", features = ["preserve_order"] }
tracing = "0.1"
toml = { workspace = true }
