[package]
name = "shore-call-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Compressed, queryable SQLite store for the Silvershore daemon's observability records (LLM calls and heartbeat/dreaming events)."

[dependencies]
rusqlite = { workspace = true }
zstd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
